samples/_failures_safe/1761040588_5b32f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b930fff4.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_b930fff4.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
